[gd_scene load_steps=11 format=3 uid="uid://4vp5srwunvh8"]

[ext_resource type="Script" path="res://player/scripts/player_character.gd" id="1_7axvw"]
[ext_resource type="Shape3D" uid="uid://6gpd8v46fkoc" path="res://player/resources/player_capsuleshape.tres" id="2_148lm"]
[ext_resource type="Script" path="res://player/scripts/player_head.gd" id="3_msplp"]
[ext_resource type="Script" path="res://player/scripts/player_camera.gd" id="4_gq4hp"]
[ext_resource type="Script" path="res://player/scripts/player_light.gd" id="5_tsgpj"]
[ext_resource type="Script" path="res://player/scripts/player_ray_cast.gd" id="6_hgym2"]
[ext_resource type="AudioStream" uid="uid://b4nciekqn81lu" path="res://assets/audio/collision_effects/166506__yoyodaman234__concrete-footstep-4.wav" id="7_2gnjy"]
[ext_resource type="Animation" uid="uid://dufhktbi1isod" path="res://player/resources/player_anim_crouch.tres" id="8_ypiba"]
[ext_resource type="Script" path="res://player/scripts/animation_player.gd" id="9_sccne"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdv1m"]
_data = {
"crouch": ExtResource("8_ypiba")
}

[node name="player_character" type="CharacterBody3D"]
input_ray_pickable = false
script = ExtResource("1_7axvw")

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = ExtResource("2_148lm")

[node name="PlayerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)
script = ExtResource("3_msplp")

[node name="PlayerCamera" type="Camera3D" parent="PlayerHead"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
current = true
script = ExtResource("4_gq4hp")

[node name="PlayerLight" type="SpotLight3D" parent="PlayerHead"]
transform = Transform3D(-1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0)
visible = false
light_bake_mode = 0
script = ExtResource("5_tsgpj")

[node name="PlayerRayCast" type="RayCast3D" parent="PlayerHead"]
target_position = Vector3(0, 0, 3)
hit_back_faces = false
collide_with_areas = true
script = ExtResource("6_hgym2")

[node name="PlayerStepsAudio3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_2gnjy")
unit_size = 3.0
bus = &"FX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gdv1m")
}
script = ExtResource("9_sccne")
